Introduce dimension of text edit related floating window.
This is a follow up CL of I5a9bcbe29400d6193eb0532a5e711a78a12383cd.
Floating toolbar and suggestion window has a same elevation and
layout_margin. Introduce dimension value for elevation and
layout_margin and refer them.

Bug: 15347319

Change-Id: I6c635398241b60415437707285faeac76a1a4b6d
(cherry picked from commit f6eadd14e71c4f52573987d155b67ba9714a2e67 [formerly eee8941e52042ff8a9be1b20f91c8c5045aa3b83])

Former-commit-id: d538e38a00288fe6f97de9d867a2e1eba769d912

--- a/core/res/res/layout/text_edit_suggestion_container.xml
+++ b/core/res/res/layout/text_edit_suggestion_container.xml
@@ -22,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:elevation="2dp"
-        android:layout_margin="20dp"
+        android:elevation="@android:dimen/text_edit_floating_toolbar_elevation"
+        android:layout_margin="@android:dimen/text_edit_floating_toolbar_margin"
         android:background="@drawable/text_edit_suggestions_window"
         android:dropDownSelector="@drawable/list_selector_background"
         android:divider="@null">
