Adapted the style of notification groups
The title is now not using the spanned styling anymore
and the overflow is divided differently. Also fixed the
layout for RTL languagues and BIDI.

Change-Id: I5963e1990fe0efefd0355fcaae249546cbb75181

Former-commit-id: a3d3b91a6eb1db65b52f12442973a1820754c8c0

--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -241,6 +241,10 @@
         parent="@*android:style/TextAppearance.Material.Notification.Info">
     </style>
 
+    <style name="TextAppearance.Material.Notification.HybridNotificationDivider"
+        parent="@*android:style/TextAppearance.Material.Notification">
+    </style>
+
     <style name="SearchPanelCircle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
