--- a/core/res/res/values/dimens.xml
+++ b/core/res/res/values/dimens.xml
@@ -449,5 +449,7 @@
     <item type="dimen" format="integer" name="time_picker_column_start_material">0</item>
     <item type="dimen" format="integer" name="time_picker_column_end_material">1</item>
 
+    <item type="dimen" name="aerr_padding_list_top">15dp</item>
+
     <item type="fraction" name="docked_stack_divider_fixed_ratio">34.15%</item>
 </resources>
