Keyboard Shortcuts - cleanup
Clean up the code, introduce and use a separator, fix the
existing end-of-groups separator.

Bug: 26848253
Change-Id: I2b7723ebf257e7176f08551766c59d86d01cf6a6

Former-commit-id: 2b909e975f003f7dce86c471ba7d3c9152b43ed3

--- a/packages/SystemUI/res/layout/keyboard_shortcuts_category_separator.xml
+++ b/packages/SystemUI/res/layout/keyboard_shortcuts_category_separator.xml
@@ -15,8 +15,11 @@
   ~ limitations under the License
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-</LinearLayout>
+<View xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_marginStart="24dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="0dp"
+    android:layout_marginBottom="20dp"
+    android:background="?android:attr/dividerHorizontal" />
