Fixing language search box size and maximization
The search box for the language was entering full screen in
landscape mode, making the search results invisible.
It was also "shifted" to the right, leaving a few characters from
the title visible (ugly), and making the edit area smaller.

This change fixes that behavior, and because we have more space
we can also increase the character limit for the hint string.

Bug: 26944452
Bug: 26944321
Bug: 26957818
Bug: 26732587
Change-Id: Ib5901bd7240ac57b6d39cb4392edccc8d941802d

Former-commit-id: 920280b4d15ab00bf9eb10c8991bbf0aee424305

--- a/core/res/res/menu/language_selection_list.xml
+++ b/core/res/res/menu/language_selection_list.xml
@@ -14,12 +14,12 @@
      limitations under the License.
 -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/locale_search_menu"
         android:title="@string/locale_search_menu"
-        app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView" />
+        android:icon="@*android:drawable/ic_search_api_material"
+        android:showAsAction="always|collapseActionView"
+        android:actionViewClass="android.widget.SearchView" />
 
 </menu>
