Hide swipe-up gesture behind tuner flag
(;ﾟ︵ﾟ;)

Bug: 26317834
Change-Id: If489d2bac21e376f2b24a3ce0537a2a8a29651ab

Former-commit-id: 8f2a44f934afd5492248935f564d0b3f2f676d93

--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -122,6 +122,11 @@
             android:title="@string/overview_fast_toggle_via_button"
             android:summary="@string/overview_fast_toggle_via_button_desc" />
 
+        <com.android.systemui.tuner.TunerSwitch
+            android:key="overview_nav_bar_gesture"
+            android:title="@string/overview_nav_bar_gesture"
+            android:summary="@string/overview_nav_bar_gesture_desc" />
+
     </PreferenceScreen>
 
     <SwitchPreference
