Adjust QS Header in landscape
Give some padding on the expand arrow.

Change-Id: Ia2f88beb453634bfc82a17033f2e7a76d12e2620

Former-commit-id: fece2ab2f73af098430b10fa0979e49f97079ab5

--- a/packages/SystemUI/res/values-sw600dp/dimens.xml
+++ b/packages/SystemUI/res/values-sw600dp/dimens.xml
@@ -93,4 +93,6 @@
 
     <dimen name="navigation_key_width">128dp</dimen>
     <dimen name="navigation_key_padding">25dp</dimen>
+
+    <dimen name="qs_expand_margin">0dp</dimen>
 </resources>
