Fix battery off center
Bug: 26811313
Change-Id: I1637ebcbc06665252a34ad9929bd772d04abe33f

Former-commit-id: eae7c318864bcfd814c8be697315f829952ccc69

--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -606,4 +606,7 @@
 
     <dimen name="docked_divider_handle_width">16dp</dimen>
     <dimen name="docked_divider_handle_height">2dp</dimen>
+
+    <dimen name="battery_height">14.5dp</dimen>
+    <dimen name="battery_width">9.5dp</dimen>
 </resources>
