Settings drawer work
 - Final visuals
 - Show under status bar
 - Fix activity flow surrounding drawer use

Change-Id: I161702219c26cabc6b2d1adbaa6fbfb1d9fd5b07

Former-commit-id: cafda1f90ebf79ec3a56d43d8d3c0d63c9d84cb2

--- a/packages/SettingsLib/res/layout/settings_with_drawer.xml
+++ b/packages/SettingsLib/res/layout/settings_with_drawer.xml
@@ -23,7 +23,8 @@
         android:id="@+id/content_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:fitsSystemWindows="false" >
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:navigationContentDescription="@*android:string/action_bar_up_description"
                 android:theme="?android:attr/actionBarTheme"
+                android:paddingTop="@*android:dimen/status_bar_height"
                 style="?android:attr/toolbarStyle"
                 android:background="?android:attr/colorPrimary" />
         </FrameLayout>
