--- a/packages/SettingsLib/res/layout/drawer_spacer.xml
+++ b/packages/SettingsLib/res/layout/drawer_spacer.xml
@@ -1,5 +1,5 @@
 <!--
-    Copyright (C) 2015 The Android Open Source Project
+    Copyright (C) 2016 The Android Open Source Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -13,25 +13,8 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<LinearLayout
+<Space
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/spacer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:orientation="vertical">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider" />
-
-    <TextView
-        android:id="@android:id/title"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:paddingStart="16dp"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-</LinearLayout>
+    android:layout_height="32dp" />
