Language list heading: add padding and make it bold [DO NOT MERGE]
This makes it consistent with heading labels used in other areas
of the Settings app.

Bug: 26758145
Change-Id: I9b66e97b5a0a8b0646e4b345b25b6d93178fc8e6
(cherry picked from commit 686e0dae51fccbf32a2a41e76755390493d77976 [formerly 5d1e9977350b85828f3ba533f3bf9d17917a9977])

Former-commit-id: e6beed8075f28e233ed0a87ce2c0617b046d2b17

--- a/core/res/res/layout/language_picker_section_header.xml
+++ b/core/res/res/layout/language_picker_section_header.xml
@@ -19,7 +19,8 @@
           style="?android:attr/preferenceCategoryStyle"
           android:layout_width="match_parent"
           android:layout_height="36dp"
-          android:paddingStart="12dp"
-          android:paddingEnd="12dp"
+          android:gravity="center_vertical"
+          android:paddingStart="18dp"
+          android:paddingEnd="18dp"
           android:textColor="?android:attr/colorAccent"
           tools:text="@string/language_picker_section_all"/>
