Fix vector "right arrow" drawable to be properly 24dp.
This drawable is used for cascading menus. It was 25dp on one dimension
before, for some reason. I verified it looks fine at 24x24.

Change-Id: Iff5d4f00655d77830d9492190b1a74ef6f408f47
(cherry picked from commit bc219858deb23d5744289194561cef495fe6aa96 [formerly c007e91cc0519adeb4ff35e9e8c436231c2be822])

Former-commit-id: 8ec0c5eb134183832fe182cfa2f5051e0fcc94e9

--- a/core/res/res/drawable/ic_arrow_drop_right_black_24dp.xml
+++ b/core/res/res/drawable/ic_arrow_drop_right_black_24dp.xml
@@ -15,10 +15,10 @@
 -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="25.0dp"
-    android:viewportHeight="25.0"
+    android:height="24.0dp"
+    android:viewportHeight="24.0"
     android:viewportWidth="24.0"
-    android:width="25.0dp"
+    android:width="24.0dp"
     android:tint="?attr/colorControlNormal"
     android:autoMirrored="true">
 
@@ -26,8 +26,7 @@
         android:name="arrow"
         android:rotation="90.0"
         android:pivotX="12.0"
-        android:pivotY="13.0"
-        android:translateY="1.0">
+        android:pivotY="12.0">
         <path android:fillColor="#000000" android:pathData="M7,14 L12,9 L17,14 L7,14 Z" />
         <path android:pathData="M0,0 L24,0 L24,24 L0,24 L0,0 Z" />
     </group>
