--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -18,13 +18,16 @@
         android:id="@+id/quick_settings_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/qs_background_primary"
-        android:paddingBottom="8dp"
-        android:elevation="2dp">
+        android:background="@drawable/qs_background_primary">
 
     <com.android.systemui.qs.QSPanel
             android:id="@+id/quick_settings_panel"
             android:background="#0000"
+            android:layout_marginTop="@dimen/status_bar_header_height"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp" />
+
+    <include layout="@layout/quick_status_bar_expanded_header" />
+
 </com.android.systemui.qs.QSContainer>
