Revert "Extract QS animations to QSContainer"
This reverts commit 0d6ca13b0b1c9f8e03a69e360f848599f7b60a99 [formerly 04dd9d008a314709d4ab80216e2db6a7bb3a2a38].

Change-Id: I76f059fe54ad4417c45e008de5291da0f24099e1

Former-commit-id: 1b862de7b41dacf3ea5437d5e88c93b7a5af3cb5

--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -19,15 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/qs_background_primary"
-        android:paddingBottom="8dp">
+        android:paddingBottom="8dp"
+        android:elevation="2dp">
 
     <com.android.systemui.qs.QSPanel
             android:id="@+id/quick_settings_panel"
             android:background="#0000"
-            android:layout_marginTop="@dimen/status_bar_header_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-    <include layout="@layout/quick_status_bar_expanded_header" />
-
 </com.android.systemui.qs.QSContainer>
