Assign Theme.DeviceDefault.Settings -> Theme.Micro for watches
This theme is explicitly referenced via a ContextThemeWrapper,
used in InputMethodManager when constructing the alert dialog for
showInputMethodPicker(). This theme does not seem to be referenced
elsewhere in the platform.

BUG: 24803707
Change-Id: I5a67ef6e4387620a9624d13e7d76ef6f4f1d2cd2

Former-commit-id: 06844df823bf321830b9b5f959a55c271ebac794

--- a/core/res/res/values-watch/themes_device_defaults.xml
+++ b/core/res/res/values-watch/themes_device_defaults.xml
@@ -25,6 +25,7 @@
     <style name="Theme.DeviceDefault.Light.Dialog" parent="Theme.Micro.Dialog" />
     <style name="Theme.DeviceDefault.Light.DialogWhenLarge" parent="Theme.Micro.Dialog" />
     <style name="Theme.DeviceDefault.Light.Dialog.Alert" parent="Theme.Micro.Dialog.Alert" />
+    <style name="Theme.DeviceDefault.Settings" parent="Theme.Micro" />
     <style name="Theme.DeviceDefault.Wallpaper" parent="Theme.Micro" />
 
 </resources>
