Move editing from long press to edit button
Change-Id: I2bd0e2febbde4babe05545c79d585280a7b2fb14

Former-commit-id: 2142843ea5366910683d0e77840c16021f6553f5

--- a/packages/SystemUI/res/layout/qs_paged_tile_layout.xml
+++ b/packages/SystemUI/res/layout/qs_paged_tile_layout.xml
@@ -20,11 +20,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.android.systemui.qs.PageIndicator
-        android:id="@+id/page_indicator"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/page_decor"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:gravity="center" />
+        android:layout_gravity="bottom">
+
+        <com.android.systemui.qs.PageIndicator
+            android:id="@+id/page_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@android:id/edit"
+            style="@style/QSBorderlessButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:minWidth="88dp"
+            android:textAppearance="@style/TextAppearance.QS.DetailButton"
+            android:textColor="#4DFFFFFF"
+            android:focusable="true"
+            android:text="@string/qs_edit" />
+
+    </FrameLayout>
 
 </com.android.systemui.qs.PagedTileLayout>
